--- a/packages/catgirl/PKGBUILD
+++ b/packages/catgirl/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: lillian rose winter <hi@neko.vg>
 
 pkgname=catgirl
-pkgver=1.8
+pkgver=1.9a
 pkgrel=1
 pkgdesc='TLS-only terminal IRC client'
 arch=('x86_64')
@@ -10,7 +10,7 @@ url="https://git.causal.agency/${pkgname}/"
 license=('GPL3')
 depends=('libretls' 'ncurses')
 source=("https://git.causal.agency/${pkgname}/snapshot/${pkgname}-${pkgver}.tar.gz")
-md5sums=('40290e3f9216d138b9ffa3f5bd50c0df')
+md5sums=('11d1050876fce2d69002de5dfb3e61c0')
 
 build() {
 	cd "${pkgname}-${pkgver}"
