catgirl: Format maintainer header
See [1].

[1]: https://wiki.archlinux.org/title/AUR_submission_guidelines#Rules_of_submission

--- a/packages/catgirl/PKGBUILD
+++ b/packages/catgirl/PKGBUILD
@@ -1,5 +1,6 @@
-# Original Maintainer: Evan McCarthy <evan@mccarthy.mn>
-# Maintainer: lillian rose winter <hi@neko.vg>
+# Maintainer: Sebastian LaVine <mail@smlavine.com>
+# Contributor: lillian rose winter <hi@neko.vg>
+# Contributor: Evan McCarthy <evan@mccarthy.mn>
 
 pkgname=catgirl
 pkgver=1.9a
