Install man pages to correct directory
See [1].

[1]: https://aur.archlinux.org/packages/catgirl#comment-836334

Co-authored-by: Kylie McClain <kylie@somas.is>

--- a/packages/catgirl/PKGBUILD
+++ b/packages/catgirl/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=catgirl
 pkgver=1.9a
-pkgrel=1
+pkgrel=2
 pkgdesc='TLS-only terminal IRC client'
 arch=('x86_64')
 url="https://git.causal.agency/${pkgname}/"
@@ -15,7 +15,7 @@ md5sums=('11d1050876fce2d69002de5dfb3e61c0')
 
 build() {
 	cd "${pkgname}-${pkgver}"
-	./configure --prefix=/usr
+	./configure --prefix=/usr --mandir=/usr/share/man
 	make all
 }
 
