catgirl: Update to 2.0a

--- a/packages/catgirl/PKGBUILD
+++ b/packages/catgirl/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Evan McCarthy <evan@mccarthy.mn>
 
 pkgname=catgirl
-pkgver=2.0
+pkgver=2.0a
 pkgrel=1
 pkgdesc='TLS-only terminal IRC client'
 arch=('x86_64')
@@ -11,7 +11,7 @@ url="https://git.causal.agency/${pkgname}/"
 license=('GPL3')
 depends=('libretls' 'ncurses')
 source=("https://git.causal.agency/${pkgname}/snapshot/${pkgname}-${pkgver}.tar.gz")
-md5sums=('74e142ffa7e61ec5a32424550128336f')
+md5sums=('58537d6a5ea0f9f2b1b3cddfff0ff2b6')
 
 build() {
 	cd "${pkgname}-${pkgver}"
