catgirl: Fix 2.0a update
pacman(8) and vercmp(8) believes that 2.0a < 2.0. For this reason, we
need a bit of a bodge for pacman/yay/what-have-you to recognize this as
a new version.

This approach was recommended by the maintainer, june, and by Betal
of #archlinux-aur on libera.chat.

--- a/packages/catgirl/PKGBUILD
+++ b/packages/catgirl/PKGBUILD
@@ -3,23 +3,24 @@
 # Contributor: Evan McCarthy <evan@mccarthy.mn>
 
 pkgname=catgirl
-pkgver=2.0a
-pkgrel=1
+_pkgver=2.0a  # pacman believes that 2.0a < 2.0. So we need this bodge for now
+pkgver=2.0.a
+pkgrel=2
 pkgdesc='TLS-only terminal IRC client'
 arch=('x86_64')
 url="https://git.causal.agency/${pkgname}/"
 license=('GPL3')
 depends=('libretls' 'ncurses')
-source=("https://git.causal.agency/${pkgname}/snapshot/${pkgname}-${pkgver}.tar.gz")
+source=("https://git.causal.agency/${pkgname}/snapshot/${pkgname}-${_pkgver}.tar.gz")
 md5sums=('58537d6a5ea0f9f2b1b3cddfff0ff2b6')
 
 build() {
-	cd "${pkgname}-${pkgver}"
+	cd "${pkgname}-${_pkgver}"
 	./configure --prefix=/usr --mandir=/usr/share/man
 	make all
 }
 
 package() {
-	cd "${pkgname}-${pkgver}"
+	cd "${pkgname}-${_pkgver}"
 	make DESTDIR="$pkgdir/" install
 }
