--- a/.build.yml
+++ b/.build.yml
@@ -5,13 +5,11 @@ triggers:
     condition: always
     to: Sebastian LaVine <mail@smlavine.com>
 packages:
-  - py3-pip
+  - cmark
   - jq
 sources:
   - https://git.sr.ht/~smlavine/aurpackages
 tasks:
-  - mistletoe: |
-      pip3 install mistletoe  # installs to ~/.local/bin
   - generate-and-upload: |
       # In sr.ht/~smlavine/aurpackages, there are git repositories of AUR
       # packages that I maintain. I don't want to have a README.md in those
@@ -24,7 +22,7 @@ tasks:
       # the README to. They are:
       #     ~smlavine/catgirl-aur (72346)
       cd aurpackages
-      ~/.local/bin/mistletoe README.md |
+      cmark -t html README.md |
           jq -sR \
               '{
                   "query": "mutation UpdateRepo($id, Int!, $readme: String!) {
