--- a/.build.yml
+++ b/.build.yml
@@ -10,30 +10,31 @@ packages:
 sources:
   - https://git.sr.ht/~smlavine/aurpackages
 tasks:
-  - generate-and-upload: |
-      # In sr.ht/~smlavine/aurpackages, there are git repositories of AUR
-      # packages that I maintain. I don't want to have a README.md in those
-      # repositories, because their primary home is on aur.archlinux.org, but I
-      # still want to show the project README on their git.sr.ht page. This
-      # uploads the README for this repository to those repositories. This
-      # GraphQL endpoint expects HTML, so we have to convert it here. I use
-      # mistletoe because that is the markdown parser used by sourcehut itself.
-      # Inline in this script are repository IDs for each repository I upload
-      # the README to. They are:
-      #     ~smlavine/catgirl-aur (72346)
-      cd aurpackages
-      cmark README.md |
-          jq -sR \
-              '{
-                  "query": "mutation UpdateRepo($id: Int!, $readme: String!) {
-                      updateRepository(id: $id, input: { readme: $readme}) {
-                          id
-                      }
-                  }",
-                  "variables": {
-                      "id": 72346,
-                      "readme": .
+  # In sr.ht/~smlavine/aurpackages, there are git repositories of AUR
+  # packages that I maintain. I don't want to have a README.md in those
+  # repositories, because their primary home is on aur.archlinux.org, but I
+  # still want to show the project README on their git.sr.ht page. This
+  # uploads the README for this repository to those repositories. This
+  # GraphQL endpoint expects HTML, so we have to convert it here. I use
+  # mistletoe because that is the markdown parser used by sourcehut itself.
+  # Inline in this script are repository IDs for each repository I upload
+  # the README to. They are:
+  #     ~smlavine/catgirl-aur (72346)
+  - convert-md-to-html: |
+      cmark aurpackages/README.md > README.html
+  - generate-query: |
+      jq -sR \
+          '{
+              "query": "mutation UpdateRepo($id: Int!, $readme: String!) {
+                  updateRepository(id: $id, input: { readme: $readme}) {
+                      id
                   }
-              }' |
-          acurl -H "Content-Type: application/json" -d@- \
-              https://git.sr.ht/query
+              }",
+              "variables": {
+                  "id": 72346,
+                  "readme": .
+              }
+          }' < README.html > query.graphql
+  - send-query: |
+      acurl -H "Content-Type: application/json" -d@query.graphql \
+          https://git.sr.ht/query
