--- a/.build.yml
+++ b/.build.yml
@@ -15,10 +15,9 @@ tasks:
   # repositories, because their primary home is on aur.archlinux.org, but I
   # still want to show the project README on their git.sr.ht page. This
   # uploads the README for this repository to those repositories. This
-  # GraphQL endpoint expects HTML, so we have to convert it here. I use
-  # mistletoe because that is the markdown parser used by sourcehut itself.
-  # Inline in this script are repository IDs for each repository I upload
-  # the README to. They are:
+  # GraphQL endpoint expects HTML, so we have to convert it here. Inline in
+  # this script are repository IDs for each repository I upload the README to.
+  # They are:
   #     ~smlavine/catgirl-aur (72346)
   - convert-md-to-html: |
       cmark aurpackages/README.md > README.html
