--- a/.build.yml
+++ b/.build.yml
@@ -25,11 +25,11 @@ tasks:
       # READMEs look the same as other markdown files rendered on sourcehut.
       set -o pipefail
       cmark aurpackages/README.md |
-          sed -e 's:^<h5>:<h6>:' -e 's:<\h5>$:<\h6>:' \
-              -e 's:^<h4>:<h5>:' -e 's:<\h4>$:<\h5>:' \
-              -e 's:^<h3>:<h4>:' -e 's:<\h3>$:<\h4>:' \
-              -e 's:^<h2>:<h3>:' -e 's:<\h2>$:<\h3>:' \
-              -e 's:^<h1>:<h2>:' -e 's:<\h1>$:<\h2>:' |
+          sed -e 's:^<h5>:<h6>:' -e 's:</h5>$:</h6>:' \
+              -e 's:^<h4>:<h5>:' -e 's:</h4>$:</h5>:' \
+              -e 's:^<h3>:<h4>:' -e 's:</h3>$:</h4>:' \
+              -e 's:^<h2>:<h3>:' -e 's:</h2>$:</h3>:' \
+              -e 's:^<h1>:<h2>:' -e 's:</h1>$:</h2>:' |
           tee README.html
   - generate-query: |
       set -o pipefail
